# GaPFlow

./: .check_lammps.py  .check_netcdf.py  .check_petsc.py  .gitignore  .install_netcdf.sh  AUTHORS  CONTRIBUTING.md  README.md  genindex.html  gpjax.mplstyle  hans.html  index.html  install_lammps.sh  install_petsc.sh  integrate.py  main.py  models.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  visualization.html
.github/workflows/: ci.yaml  doc.yaml  draft-pdf.yaml  test-petsc-install.yaml  test.yaml  wheels.yaml  wheels.yml
GaPFlow/: __init__.py  __main__.py  db.py  dtool.py  gap.py  gp.py  info.py  integrate.py  io.py  logging.py  md.py  parallel.py  plotting.py  problem.py  solver_explicit.py  solver_fem.py  solver_fem_1d.py  solver_fem_2d.py  stress.py  topography.py  utils.py
GaPFlow/analysis/: __init__.py  postprocessing.py
GaPFlow/cli/: animate.py  animate1d.py  animate2d.py  plot_frame.py  plot_frames.py  plot_height.py  plot_history.py
GaPFlow/fem/: _doc_FEM_INTEGRATION.ipynb  _doc_FEM_THEORY_1D.ipynb  assembly_layout.py  num_solver.py  petsc_system.py  quad_fields.py  terms_1d.py  terms_2d.py  test.ipynb  test_muGrid_quad.py  utils.py  utils2d.py
GaPFlow/fem2d/: io.py  muGrid_netCDF.py  muGrid_p_g.py  test_communicate_ghosts_serial.py  test_minimal_solve.py  test_mugrid.nc  test_solve_pgrad.py  test_solve_slider.py  test_solve_sphere.py
GaPFlow/fem_1d/: __init__.py  num_solver.py  utils.py
GaPFlow/fem_2d/: assembly.py  assembly_layout.py  elements.py  grid_index.py  petsc_system.py  quad_fields.py  residual_analysis.py  scaling.py  scipy_system.py  solution_guards.py  stab_diagnostics.py  terms.py
GaPFlow/fem_2d_test/: benchmark.py  parabolic_energy_elastic_timer.py  test_solve_slider.py  test_solve_sphere.py
GaPFlow/md/: __init__.py  _lammps.py  base.py  lj.py  md.py  mock.py  mol.py  moltemplate.py  runner.py  utils.py
GaPFlow/models/: __init__.py  density.py  dry_contact.py  energy.py  gp.py  heatflux.py  pressure.py  profiles.py  sound.py  stress.py  velocity_profile.py  viscosity.py  viscous.py
GaPFlow/moltemplate/: fluid.py  init.py  interface.py  main.py  run.py  settings.py  solid.py
GaPFlow/resources/: gpjax.mplstyle
GaPFlow/viz/: __init__.py  animations.py  plotting.py  utils.py
_sources/: index.rst  readme.rst.txt
_sources/api/: index.rst  index.rst.txt
_sources/tutorials/: 02_stress_sympy.ipynb  03_eos.ipynb.txt  04_viscosity.ipynb.txt  05_confined_fluids.ipynb.txt  06_GP.ipynb  06_lubrication.ipynb.txt  06_lubrication_2d.ipynb  07_GP.ipynb.txt  07_gp_mock.ipynb  09_elastic_deformation.ipynb  index.rst  index.rst.txt
api/: index.html
api/summary/: GaPFlow.Database.html  GaPFlow.Problem.html  GaPFlow.integrate.html  GaPFlow.md.GoldAlkane.html  GaPFlow.md.LennardJones.html  GaPFlow.md.Mock.html  GaPFlow.md.MolecularDynamics.html  GaPFlow.md.moltemplate.html  GaPFlow.models.BulkStress.html  GaPFlow.models.Pressure.html  GaPFlow.models.WallStress.html  GaPFlow.models.gp.GaussianProcessSurrogate.html  GaPFlow.models.pressure.html  GaPFlow.models.sound.html  GaPFlow.models.viscosity.html  GaPFlow.models.viscous.html  GaPFlow.topography.ElasticDeformation.html  GaPFlow.topography.Topography.html  GaPFlow.viz.animations.html  GaPFlow.viz.plotting.html  GaPFlow.viz.utils.html
doc/: GaPFlow.models.rst  GaPFlow.moltemplate.rst  GaPFlow.rst  GaPFlow.viz.rst  conf.py  index.rst  modules.rst  quickstart.rst  readme.rst  visualization.rst
doc/api/: index.rst  models.rst  moltemplate.rst  viz.rst
doc/dev_notes/: diagonal_scaling_plan.md
doc/models/: eos.py  viscosity.py
doc/theory/: confined_fluids.ipynb  index.rst  stress_sympy.py
doc/tutorials/: 01_macro_equations.ipynb  02_stress_sympy.ipynb  03_constitutive_laws.ipynb  03_eos.ipynb  04_confined_fluids.ipynb  04_viscosity.ipynb  05_confined_fluids.ipynb  05_lubrication.ipynb  05_lubrication_1d.ipynb  06_GP.ipynb  06_lubrication.ipynb  07_GP.ipynb  07_elastic_deformation.ipynb  08_FEM1d_theory.ipynb  08_FEM_1d.ipynb  08_elastic_deformation.ipynb  08_gp_md.ipynb  09_FEM1d_examples.ipynb  09_fem_1d_examples.ipynb  10_wall_fluid_heatflow.ipynb  10_wall_heat.ipynb  11_FEM2d_theory.ipynb  11_fem_2d_theory.ipynb  12_FEM2d_assembly.ipynb  12_fem_2d_examples.ipynb  13_solver_comparison.ipynb  14_FEM2d_analytic.ipynb  14_fem_2d_analytic.ipynb  A_config.ipynb  B_scripting.ipynb  broken.ipynb  index.rst
examples/: .gitignore  jax_numpy.py  journal.yaml  journal_gp.yaml  main.py  plot.py  slip_1d_lj_mock.py  slip_2d_lj_mock.py
examples/config/: cosine_mol.yaml  inclined_1d_powerlaw.yaml  inclined_1d_powerlaw_fem.yaml  journal.yaml  journal1D_gp.yaml  journal2D_gp.yaml  journal_1d_dowson-higginson_gp.yaml  (+6 more)
examples_elasticity/: elastic_2_parabolic.ipynb  elastic_2_parabolic.yaml  parabolic_slider.ipynb  parabolic_slider.yaml
hans/: elasticity.py  field.py  geometry.py  input.py  integrate.py  material.py  plottools.py  problem.py
hans_mugrid/: __main__.py  db.py  density.py  gap.py  gp.py  io.py  plotting.py  problem.py  stress.py
maintenance/: update_license_headers.sh
paper/: paper.bib  paper.md
tests/: test_analytic.py  test_animation.py  test_animation_gp.py  test_database.py  test_fem2d_jacobian.py  test_fem_1d_quadrature_gradients.py  test_fem_2d_analytic.py  test_fem_2d_jacobian.py  test_fem_quadrature_gradients.py  test_fft_domain_translation.py  test_flip_axes.py  test_inference.py  test_lammps.py  test_mass_conservation.py  test_model_gradients.py  test_moltemplate.py  test_plotting.py  test_solver_comparison.py  test_sommerfeld.py  test_utils.py  test_velocity_profiles.py  test_wave_decay.py
tutorials/: 01_macro_equations.html  02_stress_sympy.html  03_constitutive_laws.html  03_eos.html  04_confined_fluids.html  04_viscosity.html  05_confined_fluids.html  05_lubrication.html  05_lubrication_1d.html  06_GP.html  06_lubrication.html  06_lubrication_2d.html  07_GP.html  07_gp_mock.html  index.html
(+97 files in other folders)
