[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "GaPFlow"
description = "Gap-averaged flow simulations with Gaussian Process regression."
readme = "README.md"
authors = [
    { name = "Hannes Holey", email = "hannes.holey@unimi.it" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

requires-python = ">3.10"
dynamic = ["version"]
dependencies = [
	"muGrid>=0.95.0",
	"tinygp==0.3.0",
	"jaxopt==0.8.5",
	"netCDF4>=1.7.2",
	"dtoolcore>=3.19.0",
	"dtool-lookup-api>=0.10.2",
	"matplotlib",
	"polars",
	"ruamel.yaml",
	"ase", 
	"mpi4py",
	"moltemplate"]

[project.optional-dependencies]
test = ['pytest',
		'coverage']

doc = ['sphinx',
	   'furo',
	   'myst-nb',
	   'jupytext',
	   'sympy']

[project.scripts]
gpf_plot_height="GaPFlow.cli:plot_height.main"
gpf_plot_history="GaPFlow.cli:plot_history.main"
gpf_plot_frame="GaPFlow.cli:plot_frame.main"
gpf_plot_frames="GaPFlow.cli:plot_frames.main"
gpf_animate1d="GaPFlow.cli:animate1d.main"
gpf_animate2d="GaPFlow.cli:animate2d.main"

[project.urls]
Source = "https://github.com/hannes-holey/gapflow"

[tool.flit.sdist]
include = ["GaPFlow/resources/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage.run]
source = ["GaPFlow"]
omit = ["GaPFlow/viz/*"]
command_line = "-m pytest"



