[build-system]
requires = [
  "scikit-build-core>=0.8",
]
build-backend = "scikit_build_core.build"

[project]
name = "GaPFlow"
description = "Gap-averaged flow simulations with Gaussian Process regression."
readme = "README.md"
authors = [
    { name = "Hannes Holey", email = "hannes.holey@unimi.it" },
    { name = "Christoph Huber", email = "christop.huber@kit.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
	"DiscoverVersion",
	"muGrid==0.96.0",
	"tinygp>=0.3.0",
	"jax",
	"jaxopt==0.8.5",
	"netCDF4>=1.7.2",
	"dtoolcore>=3.19.0",
	"dtool-lookup-api>=0.10.2",
	"matplotlib",
	"polars",
	"ruamel.yaml",
	"ase", 
	"moltemplate",
	"ContactMechanics==1.7.0",
	"IPython"]


[project.optional-dependencies]
parallel = ['mpi4py']

test = ['pytest',
		'coverage']

doc = ['sphinx',
	   'sphinx_book_theme',
	   'myst-nb',
	   'jupytext',
	   'sympy']

[project.scripts]
gpf_info="GaPFlow:info.main"
gpf_plot_height="GaPFlow.cli:plot_height.main"
gpf_plot_history="GaPFlow.cli:plot_history.main"
gpf_plot_frame="GaPFlow.cli:plot_frame.main"
gpf_plot_frames="GaPFlow.cli:plot_frames.main"
gpf_animate1d="GaPFlow.cli:animate1d.main"
gpf_animate2d="GaPFlow.cli:animate2d.main"

[project.urls]
Source = "https://github.com/hannes-holey/gapflow"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage.run]
source = ["GaPFlow"]

[tool.scikit-build]
# experimental = "true"
# metadata.version.provider = "DiscoverVersion.scikit_build_core"
build-dir = "build/{wheel_tag}"
build.verbose = true

[tool.cibuildwheel]
skip = ["*cp314t*", "*musllinux*"]
test-command = "pytest -v {project}/tests"
test-requires = "pytest"

# binary installations of muGrid require at least serial netCDF
[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "yum install -y netcdf-devel"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-all = "brew install netcdf"

# excluded (for now)
[tool.cibuildwheel.windows]
archs = ["AMD64"]
